--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mynft",
   "version": "1.0.0",
-  "description": "",
+  "description": "This project demonstrates a basic Hardhat use case. It comes with a sample contract, a test for that contract, and a script that deploys that contract.",
   "main": "myNFT.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,9 +10,25 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.2.1",
+    "@openzeppelin/hardhat-upgrades": "^1.21.0",
+    "ethers": "^5.7.2",
     "hardhat": "^2.12.1"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.7.3"
-  }
+    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "@openzeppelin/contracts": "^4.7.3",
+    "dotenv": "^16.0.3"
+  },
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/HoangTinh0101/myNFT.git"
+  },
+  "bugs": {
+    "url": "https://github.com/HoangTinh0101/myNFT/issues"
+  },
+  "homepage": "https://github.com/HoangTinh0101/myNFT#readme"
 }
